@startuml
class Edificio {
- nombre: String
- contadorVisitas: int
+ visitar(r : Reloj): Pista
}

class Ciudad {
    - posicion : Posicion
    + visitar(edificio : String, r : Reloj): Pista
}

class Jugador {
    + visitar(edificio:String, r : Reloj): Pista
}




class Reloj{
    + mostrar() : Tiempo
    + incrementar(tiempo : Tiempo): void
    - verificarTiempoExcedido() : void
}

class Tiempo{
    - horas : double
    + incrementar(horas : double)
    + esMayor(tiempo : Tiempo): bool

}

class Pista {
    - contenido: String
    + mostrar(): String
}
Jugador -->"1" Ciudad: está
Ciudad o-- "3" Edificio
Edificio ..> Reloj: actualiza
Edificio --> "1" Pista
Reloj o-- "2" Tiempo


@enduml
